--- a/portfolio/bio.html
+++ b/portfolio/bio.html
@@ -14,7 +14,7 @@
 	
 	<div class="clear"></div>
 	<div class="bioo">
-		<fieldset id="bioo">
+		<fieldset>
 		  	<legend id="edu">Biography</legend>
 		  	<p> saya adalah Sholikhah Indah Widiyanti, yang terlahir sebagai anak pertama. Dia adalah anak yang rendah hati, suka menabung, berbakti kepada orang tua, tidak sombong, baik hati, suka menolong. kini dia menempuh kehidupan nyata yang penuh drama. sebari mencari jodoh, ia menumpuh pendidikan di universitas negeri yogyakarta yang keren aja.</p>
 		</fieldset>
